--- a/pacman.html
+++ b/pacman.html
@@ -22,6 +22,14 @@
     <link rel="preload" href="./assets/img/img35/pipeConnectorRight.png" as="image">
     <link rel="preload" href="./assets/img/img35/pipeConnectorTop.png" as="image">
     <link rel="preload" href="./assets/img/img35/pipeCross.png" as="image">
+    <link rel="preload" href="./assets/musics/clickButton.mp3" as="audio">
+    <link rel="preload" href="./assets/musics/ghostAudio.MP3" as="audio">
+    <link rel="preload" href="./assets/musics/Pac-man theme remix - By Arsenic1987.mp3" as="audio">
+    <link rel="preload" href="./assets/musics/pacman-death-sfx.mp3" as="audio">
+    <link rel="preload" href="./assets/musics/pacman-win.mp3" as="audio">
+    <link rel="preload" href="./assets/musics/pacmanwakawaka.mp3" as="audio">
+    <link rel="preload" href="./assets/musics/start-pacman.mp3" as="audio">
+    
 </head>
 
 <body>
