Renamed the ghostAudio format

--- a/pacman.html
+++ b/pacman.html
@@ -21,6 +21,18 @@
     <link rel="preload" href="./assets/img/img35/pipeConnectorLeft.png" as="image">
     <link rel="preload" href="./assets/img/img35/pipeConnectorRight.png" as="image">
     <link rel="preload" href="./assets/img/img35/pipeConnectorTop.png" as="image">
+
+    <link rel="preload" href="./assets/0lives.png" as="image">
+    <link rel="preload" href="./assets/1lives.png" as="image">
+    <link rel="preload" href="./assets/2lives.png" as="image">
+    <link rel="preload" href="./assets/3lives.png" as="image">
+    <link rel="preload" href="./assets/main.png" as="image">
+    <link rel="preload" href="./assets/map1.png" as="image">
+    <link rel="preload" href="./assets/map2.png" as="image">
+    <link rel="preload" href="./assets/map3.png" as="image">
+    <link rel="preload" href="./assets/pacmannn.png" as="image">
+    <link rel="preload" href="./assets/img/pacman-back.png" as="image">
+
     <link rel="preload" href="./assets/img/img35/pipeCross.png" as="image">
     <link rel="preload" href="./assets/musics/clickButton.mp3" as="audio">
     <link rel="preload" href="./assets/musics/ghostAudio.MP3" as="audio">
