Just Cleaning Up

--- a/pacman.html
+++ b/pacman.html
@@ -52,6 +52,7 @@
             <img src="./assets/pacmannn.png" alt="">
         </div>
 
+        <!-- FOR MAP SELECTION BLOCK -->
         <div id="mapSelector">
 
 
@@ -71,6 +72,7 @@
             </div>
         </div>
 
+        <!-- FOR LEVEL OF DIFFICULTY BLOCK -->
         <div id="lvlSelector">
             <div id="backButtonLS">
                 <img src="./assets/img/pacman-back.png" alt="">
@@ -84,6 +86,7 @@
 
     </div>
 
+    <!-- ACTUAL GAME SCREEN -->
     <div id="gameScreen">
         <canvas id="mainGame"></canvas>
 
@@ -102,6 +105,7 @@
            
     </div>
 
+    <!-- WINNER -->
     <div id="winnerScreen">
         <div class="winnerBgScreen"></div>
         <div id="winnerTextCont">
@@ -110,6 +114,7 @@
         </div>
     </div>
 
+    <!-- GAME OVER / PLAYER LOST -->
     <div id="gameOverScreen">
         <div class="gameOverBgScreen"></div>
         <div id="gameOverTextCont">
