just editing the 0lives alt

--- a/pacman.html
+++ b/pacman.html
@@ -97,7 +97,7 @@
                     <p id="scoreEl" style="font-family: 'Courier New', Courier, monospace; font-size: 30px; color: rgb(252, 218, 0);">0</p>
                 </div>
                 <div id="livesLeftContainer">
-                    <img id="livesLeftImg" src="./assets/3lives.png" alt="">
+                    <img id="livesLeftImg" src="./assets/3lives.png" alt="3 LIVES">
                 </div>
                 
             </div>
