--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
             <div class="subDet">
                 <div class="docu">
                     <i class='bx bx-book-content'></i>
-                    <a href="" style="font-family: Arial, Helvetica, sans-serif;">DEVELOPMENT JOURNAL</a>
+                    <a href="https://docs.google.com/document/d/1vVBSC103RYV2fty11unj1W-iDsPI1_dOFBMJTOumR48/edit?usp=sharing" style="font-family: Arial, Helvetica, sans-serif;">DEVELOPMENT JOURNAL</a>
                 </div>
                 <div class="video">
                     <i class='bx bx-video'></i>
-                    <a href="" style="font-family: Arial, Helvetica, sans-serif;">VIDEO DEMONSTRATION</a>
+                    <a href="https://www.loom.com/share/cfe592160bad44a38c616c7dfae4f519?sid=e2e1fa3c-f815-4fb9-9f2f-20763f615cd2" style="font-family: Arial, Helvetica, sans-serif;">VIDEO DEMONSTRATION</a>
                 </div>
 
                 <div class="src-code">
                     <i class='bx bx-code-alt'></i>
-                    <a href="" style="font-family: Arial, Helvetica, sans-serif;">SOURCE CODE</a>
+                    <a href="https://github.com/NatMin143/PACMAN.git" style="font-family: Arial, Helvetica, sans-serif;">SOURCE CODE</a>
                 </div>
             </div>
 
